# tabular-ml-pipeline

./: .gitignore  README.md  model_card.md  pyproject.toml
.github/workflows/: ci.yml
configs/: pipeline.yaml
data/: README.md  adult_sample.csv
docs/: api.md  usage.md
examples/: build_pipeline.py  predict_with_saved_model.py
notebooks/: demo.ipynb
results/: best_model.joblib  metrics.json
scripts/: compare_models.py  download_data.py
src/tabml/: __init__.py  compare.py  config.py  data.py  importance.py  pipeline.py  plots.py  selection.py
tests/: test_tabml.py
