[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tabml"
version = "0.2.0"
description = "A configurable scikit-learn pipeline for messy tabular data: imputation, encoding, LASSO selection, and a tuned multi-model comparison"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aamir Malik" }]
keywords = ["scikit-learn", "tabular-data", "pipeline", "columntransformer", "model-selection"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff==0.15.22", "black==26.5.1"]

[project.urls]
Repository = "https://github.com/aamirmalik-dr/tabular-ml-pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
